new framework and plots

--- a/tab_1_background/background.html
+++ b/tab_1_background/background.html
@@ -10,7 +10,7 @@
 
 
 
-<meta name="date" content="2020-05-04" />
+<meta name="date" content="2020-05-15" />
 
 <title>Tab 1 Background</title>
 
@@ -1510,32 +1510,26 @@ div.tocify {
 
 
 <h1 class="title toc-ignore">Tab 1 Background</h1>
-<h4 class="date">May 04, 2020</h4>
+<h4 class="date">May 15, 2020</h4>
 
 </div>
 
 
 <div id="background" class="section level2">
 <h2>Background</h2>
-<p>The accumulation of discarded objects (a.k.a. trash and debris) in the environment has become an issue of significant, global concern. On land and in freshwater habitats, these objects are typically referred to as trash, and in the marine environment, these objects are referred to as marine debris. Trash and marine debris affect aesthetics and/or aquatic life across every habitat they touch. Marine debris in southern California significantly influences the decision of the public to go to beaches, costing Orange County residents alone an estimated $148 million per year just to travel to cleaner beaches. Debris presents entanglement and ingestion dangers for marine organisms. And plastics in the environment can transport other contaminants, creating a bioaccumulation pathway by which aquatic organisms take up contaminants as they inadvertently consume plastic.</p>
+<p>The Southern California Bight (SCB) is a 6003 <span class="math inline">\(km^2\)</span> open embayment that stretches from Point Conception, California, to the United States-Mexico International Border (Punta Colonet, Baja California). The SCB is an unique marine ecosystem with complex topography and diverse habitats that are inhabited by thousands of species of ﬁsh and invertebrates. The Bight also houses two major ports: the Los Angeles/Long Beach Harbor, the largest commercial port in the United States, and San Diego Harbor, home of some of the largest US Naval facilities in the country. In addition, the SCB offers Southern California several miles-long beaches along with numerous recreational activities that attract millions of tourists annually, making it a major contributor to the economy of that region (Moore et. al. 2018).</p>
+<p>The SCB also houses two of the largest metropolitan areas in the West Coast, Los Angeles and San Diego, with the overall population exceeding 21 million people according to the Census Bureau 2010. The continuous growth in population and urban developments has raised many concerns about the impact humans have on nature. One of these concerns focuses on the accumulation of man-made objects being discarded into the natural environment, speciﬁcally in streams, rivers and subsequently into the Bight. In rivers and streams, these discarded objects are speciﬁed as trash while in the marine environment, they are often referred to as marine debris. On land, the presence of trash negatively impacts the aesthetics of the environment. This effect can potentially lead to the reduction of tourism, drive away local business, and consequently harm the regional economy. Marine debris, on the other hand, can pose serious threat on aquatic life through entanglement (i.e. ”ghost” ﬁshing), ingestion, as well as providing assistance for invading species causing alteration of the benthic communities (Hofer 2008, Moore et. al. 2018).</p>
 </div>
 <div id="goals-of-this-study" class="section level2">
 <h2>Goals of This Study</h2>
-<p>This study aimed to create southern California’s first regionalized assessment of trash and marine debris, with a goal to assess the extent and magnitude of trash and marine debris in southern California waterways. Three key questions were asked:</p>
-<ul>
-<li><p>Does the extent and magnitude of trash and marine debris vary among freshwater and marine habitats?</p></li>
-<li><p>Does the extent and magnitude of trash and marine debris vary over time?</p></li>
-</ul>
+<p>The Southern California Bight Regional Monitoring Program, also known as the Bight Program, is a collective effort of multiple agencies with the aim to provide the ﬁrst long-term regional assessment on the quality of the SCB. The program is a series of studies conducted every ﬁve years that began in 1994. The latest study, Bight ’18, was by far the largest one in scale involving 46 organizations, both international and volunteer. It consists of 5 technical components: Sediment Quality (formerly Contaminant Impact Assessment/ Coastal Ecology), Microbiology, Ocean Acidification, Harmful Algal Blooms, and Trash (Moore et. al. 2018). For this study, the main focus will be on the following objectives:</p>
+
 </div>
 <div id="study-approach" class="section level2">
 <h2>Study Approach</h2>
-<p>The Bight’13 debris survey examined trash and marine debris in three main habitat types across the land- ocean interface: (1) trash in streams, (2) marine macro-debris on the seafloor, and (3) marine micro- plastic debris in seafloor sediment. Data were collected in all three habitats utilizing a probability-based stratified-random design (Stevens 1997) that allows unbiased estimates of extent (i.e., % of stream-miles or % of seafloor with debris) and magnitude (i.e., average abundance of debris).</p>
+<p>The Bight debris survey examined trash and marine debris in three main habitat types across the land- ocean interface: (1) trash in streams, (2) marine macro-debris on the seafloor, and (3) marine micro- plastic debris in seafloor sediment. Data were collected in all three habitats utilizing a probability-based stratified-random design (Stevens 1997) that allows unbiased estimates of extent (i.e., % of stream-miles or % of seafloor with debris) and magnitude (i.e., average abundance of debris).</p>
 <div id="data-structure" class="section level4">
 <h4>Data structure</h4>
-</div>
-<div id="methodology" class="section level4">
-<h4>Methodology</h4>
-<p>To understand how widely different types of trash are spreading, the study uses kernel density estimates of gaussian basis function and cross-validation for the best bandwidth to assess the trash occurrence from 1994 to 2018 and the trash magnitude of 2018.</p>
 </div>
 </div>
 
